Added required for inputs

--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -115,8 +115,8 @@
 
               <div class="col-6 col-left padding-small-left">
                 <div class="form-input">
-                  <%= f.label :message_phone, "Telefone recado" %>
-                  <%= f.text_field :message_phone, :class => "tel" %>
+                  <%= f.label :message_phone, "*Telefone recado" %>
+                  <%= f.text_field :message_phone, :class => "tel", :required => true %>
                 </div>
               </div>
             </div>
