Fixed update curriculum

--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -232,6 +232,7 @@
           </fieldset>
 
           <div class="form-submit text-center">
+            <%= f.hidden_field :id %>
             <%= f.submit "Salvar formação acadêmica", :class => "btn btn-blue" %>
           </div>
         <% end %>
@@ -294,6 +295,7 @@
             </div>
 
             <div class="form-submit text-center">
+              <%= f.hidden_field :id %>
               <%= f.submit "Salvar curso extra/evento", :class => "btn btn-blue" %>
             </div>
           </fieldset>
@@ -355,6 +357,7 @@
             </div>
 
             <div class="form-submit text-center">
+              <%= f.hidden_field :id %>
               <%= f.submit "Salvar idioma", :class => "btn btn-blue" %>
             </div>
           </fieldset>
@@ -433,6 +436,7 @@
             </div>
 
             <div class="form-submit text-center">
+              <%= f.hidden_field :id %>
               <%= f.submit "Salvar experiência profissional", :class => "btn btn-blue" %>
             </div>
           </fieldset>
