--- a/app/views/layouts/_logged.html.erb
+++ b/app/views/layouts/_logged.html.erb
@@ -2,7 +2,13 @@
   <div class="grid-relative">
     <div class="logged-info">
       <span class="logged-message">Seja bem vindo (a)</span>
-      <span class="logged-avatar"></span>
+      <span class="logged-avatar">
+        <% if current_user.candidate.try(:image) %>
+          <%= link_to curriculum_candidate_path do %>
+          <%= image_tag current_user.candidate.image.thumb_min %>
+          <% end %>
+        <% end %>
+      </span>
       <span class="logged-name"><%= current_user.name %></span>
     </div>
 
