--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,7 +51,7 @@
       <div class="clip">
         <ul class="vacancies-list">
           <% @jobs.each do |job| %>
-          <% job.job_premiun ? premiun = "vacancies-premium" : premiun = "" %>
+          <% job.job_premiun.validate_date ? premiun = "vacancies-premium" : premiun = "" %>
           <li class="vacancies-item <%= premiun %>">
             <section>
               <%= link_to opportunities_path(job.slug), :class => "vacancies-link" do %>
