[start#77263978] create vacancy

--- a/app/assets/stylesheets/project/components/search.css.scss
+++ b/app/assets/stylesheets/project/components/search.css.scss
@@ -48,7 +48,7 @@
 
 		color: transparent;
 
-		background-image: url('icon-search.png');
+		background-image: image_url('icon-search.png');
 		background-repeat: no-repeat;
 		background-position: center;
 	}
