--- a/app/views/contractors/new.html.erb
+++ b/app/views/contractors/new.html.erb
@@ -3,8 +3,8 @@
     <section>
       <div class="page-title-container">
         <h1 class="page-title">
-          <span class="nc-min-icon nc-min-recruiters"></span> 
-          <span>Cadastro do Recrutador</span>
+          <span class="nc-min-icon nc-min-recruiters"></span>
+          <span>Cadastro do contratantes</span>
         </h1>
       </div>
 
