--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -5,8 +5,8 @@
 @import "project/spacing";
 @import "project/grid";
 
-@import "project/font";
 @import "project/color";
+@import "project/font";
 
 @import "project/default";
 @import "project/header";
@@ -17,14 +17,15 @@
 @import "project/icon";
 @import "project/page";
 @import "project/messages";
+@import "custom";
 
 @import "project/components/login";
 @import "project/components/featured";
 @import "project/components/search";
 @import "project/components/vacancies";
 @import "project/components/vacancy";
+@import "project/components/profile";
 @import "project/components/display";
-@import "custom";
 
 // @import "vendor/fancybox";
 // @import "vendor/jcarousel";
