--- a/app/assets/stylesheets/project/components/vacancies.css.scss
+++ b/app/assets/stylesheets/project/components/vacancies.css.scss
@@ -44,7 +44,7 @@
 		width: 51px;
 		height: 55px;
 
-		background: url('icon-premium.png') no-repeat center;
+		background: url('../img/icon-premium.png') no-repeat center;
 	}
 }
 
