--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,8 +4,8 @@
       <section class="featured-item">
         <span class="nc-icon nc-recruiters"></span>
         <h2 class="featured-title">
-          <strong>Recrutadores</strong>,
-          <%= link_to "cadastre", registration_candidate_path %> agora sua vaga, é
+          <strong>Contratantes</strong>,
+          <%= link_to "cadastre", new_contractor_path %> agora sua vaga, é
           <strong>gratuito.</strong>
         </h2>
       </section>
@@ -16,7 +16,7 @@
         <span class="nc-icon nc-candidate"></span>
         <h2 class="featured-title">
           <strong>Candidatos</strong>,
-          <%= link_to "cadastre", registration_recruiter_path %> seu currículo e
+          <%= link_to "cadastre", new_candidate_path %> seu currículo e
           <strong>pague com um post</strong> no facebook
         </h2>
       </section>
@@ -54,7 +54,7 @@
           <% job.job_premiun.validate_date ? premiun = "vacancies-premium" : premiun = "" %>
           <li class="vacancies-item <%= premiun %>">
             <section>
-              <%= link_to opportunities_path(job.slug), :class => "vacancies-link" do %>
+              <%= link_to show_job(job.slug), :class => "vacancies-link" do %>
                 <h2 class="vacancies-category"><%= job.job_category.name %></h2>
                 <h1 class="vacancies-title"><%= job.job_title %></h1>
                 <p class="vacancies-enterprise">
